--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 
-.digit {
+.digit, .operator {
     font-size: 1.25rem;
     cursor: pointer;
     color: #ffffff;
@@ -86,7 +86,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.digit:hover {
+.digit:hover, .operator:hover {
     transform: scale(1.1);
     border: 2px solid #9d4edd;
     background: rgba(0, 0, 0, 0.6);
@@ -107,6 +107,7 @@ body {
     width: 15rem;
     height: 2.5rem;
     text-align: right;
+    caret-color: transparent;
 }
 
 #calculation-input:focus {
