--- a/style.css
+++ b/style.css
@@ -107,11 +107,21 @@ body {
     width: 15rem;
     height: 2.5rem;
     text-align: right;
-    caret-color: transparent;
 }
 
 #calculation-input:focus {
     outline: none;
     border: 1px solid #9d4edd;
     box-shadow: 0 0 10px rgba(157, 78, 221, 0.5);
+}
+
+/* Remove autofill background */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: white;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px rgba(0, 0, 0, 0);
 }
