--- a/style.css
+++ b/style.css
@@ -33,15 +33,23 @@ body {
 #container {
     font-weight: 400;
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 0.5rem 0.5rem;
 
     margin: 0.5rem;
 }
 
+#top-row {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0.5rem;
+}
+
 #numbers {
-    grid-row: 1/ span 3;
+    grid-row: 2/ span 3;
     grid-column: 1/ span 3;
 
     display: grid;
@@ -52,7 +60,7 @@ body {
 }
 
 #right-side {
-    grid-row: 1/ span 4;
+    grid-row: 2/ span 4;
     grid-column: 4/ span 1;
 
     display: grid;
@@ -61,7 +69,7 @@ body {
 }
 
 #lower-row {
-    grid-row: 4/span 1;
+    grid-row: 5/span 1;
     grid-column: 1/span 3;
 
     display: grid;
@@ -70,7 +78,7 @@ body {
 }
 
 
-.digit, .operator {
+.digit, .operator, .function-btn {
     font-size: 1.25rem;
     cursor: pointer;
     color: #ffffff;
@@ -86,7 +94,12 @@ body {
     transition: all 0.3s ease;
 }
 
-.digit:hover, .operator:hover {
+.function-btn {
+    width: 100%;
+    border-radius: 2rem;
+}
+
+.digit:hover, .operator:hover, .function-btn:hover {
     transform: scale(1.1);
     border: 2px solid #ff00cc;
     background: rgba(0, 0, 0, 0.6);
@@ -133,10 +146,14 @@ input:-webkit-autofill:active{
         max-width: 350px;
     }
 
-    .digit, .operator {
+    .digit, .operator, .function-btn {
         width: 3.5rem;
         height: 3.5rem;
         font-size: 1rem;
+    }
+    
+    .function-btn {
+        width: 100%;
     }
 
     #calculation-input {
@@ -146,10 +163,14 @@ input:-webkit-autofill:active{
 }
 
 @media (max-width: 350px) {
-    .digit, .operator {
+    .digit, .operator, .function-btn {
         width: 3rem;
         height: 3rem;
         font-size: 0.9rem;
+    }
+
+    .function-btn {
+        width: 100%;
     }
 
     #calculation-input {
